--- a/src/components/z-book-card/styles.css
+++ b/src/components/z-book-card/styles.css
@@ -138,17 +138,6 @@
   font-weight: var(--font-sb);
 }
 
-:host > article div.tags {
-  display: flex;
-  overflow: hidden;
-  max-height: 32px;
-  flex-flow: row wrap;
-  align-content: stretch;
-  align-items: stretch;
-  justify-content: flex-start;
-  gap: calc(var(--space-unit) / 2);
-}
-
 :host > article ::slotted([slot="tags"]) {
   margin-bottom: var(--space-unit);
 }
@@ -201,6 +190,7 @@
 
       .book-data {
         display: flex;
+        flex: 1;
         flex-direction: column;
         justify-content: space-between;
         background-color: violet;
@@ -216,6 +206,7 @@
             .authors {
               display: -webkit-box;
               overflow: hidden;
+              margin-bottom: calc(var(--space-unit) / 2);
               -webkit-box-orient: vertical;
               font-size: var(--font-size-2);
               font-weight: var(--font-rg);
@@ -246,10 +237,44 @@
             background-color: yellow;
           }
         }
+
+        .isbn-link-section {
+          background-color: rgb(121 143 121);
+
+          .isbn-tags-section {
+            margin-bottom: calc(var(--space-unit) * 2);
+
+            .tags {
+              display: flex;
+              overflow: hidden;
+              height: 22px;
+              flex-flow: wrap;
+              margin-top: calc(var(--space-unit) / 2);
+              gap: var(--space-unit);
+            }
+          }
+
+          .link-section {
+            display: flex;
+            justify-content: space-between;
+            gap: var(--space-unit);
+
+            .adoption-tag {
+              padding: calc(var(--space-unit) / 2) var(--space-unit);
+              background-color: var(--green100);
+              border-radius: 100px;
+              font-size: var(--font-size-1);
+              font-weight: var(--font-sb);
+              letter-spacing: 0.32px;
+              line-height: 1.333;
+              text-transform: uppercase;
+            }
+          }
+        }
       }
 
       .ebook {
-        height: 100px;
+        height: 80px;
         background-color: rgb(127 208 255);
       }
     }
