feat!: add click event

--- a/src/components/z-book-card/styles.css
+++ b/src/components/z-book-card/styles.css
@@ -99,6 +99,7 @@
 
             .link-section {
               display: flex;
+              height: 24px;
               align-items: center;
               justify-content: space-between;
               gap: var(--space-unit);
