--- a/src/components/book-card/z-book-card/styles.css
+++ b/src/components/book-card/z-book-card/styles.css
@@ -48,8 +48,7 @@
           display: flex;
           flex: 1;
           flex-direction: column;
-          justify-content: flex-start;
-          gap: calc(var(--space-unit) * 2);
+          justify-content: space-between;
 
           .authors-title-cta-section {
             display: flex;
@@ -61,6 +60,7 @@
               .authors {
                 display: -webkit-box;
                 overflow: hidden;
+                height: 20px;
                 margin-bottom: calc(var(--space-unit) / 2);
                 -webkit-box-orient: vertical;
                 -webkit-line-clamp: 1;
@@ -71,6 +71,7 @@
               .opera-title {
                 display: -webkit-box;
                 overflow: hidden;
+                height: 54px;
                 -webkit-box-orient: vertical;
                 -webkit-line-clamp: 2;
                 line-clamp: 2;
@@ -82,6 +83,14 @@
           .isbn-tags-link-section {
             .isbn-tags-section {
               margin-bottom: calc(var(--space-unit) * 2);
+
+              .volume-title {
+                height: 20px;
+              }
+
+              .isbn {
+                height: 20px;
+              }
 
               .tags {
                 display: flex;
@@ -120,24 +129,28 @@
           }
         }
 
-        .ebook {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          padding: var(--space-unit);
-          background-color: var(--color-primary02);
-          border-radius: var(--border-radius);
-          gap: var(--space-unit);
+        .ebook-container {
+          height: 76px;
 
-          .app-name {
+          .ebook {
             display: flex;
             align-items: center;
-            padding: calc(var(--space-unit) / 2) 0;
-            font-family: var(--font-family-serif);
-            gap: calc(var(--space-unit) / 2);
+            justify-content: space-between;
+            padding: var(--space-unit);
+            background-color: var(--color-primary02);
+            border-radius: var(--border-radius);
+            gap: var(--space-unit);
 
-            .laz {
-              color: var(--red500);
+            .app-name {
+              display: flex;
+              align-items: center;
+              padding: calc(var(--space-unit) / 2) 0;
+              font-family: var(--font-family-serif);
+              gap: calc(var(--space-unit) / 2);
+
+              .laz {
+                color: var(--red500);
+              }
             }
           }
         }
