--- a/src/components/book-card/z-book-card/styles.css
+++ b/src/components/book-card/z-book-card/styles.css
@@ -32,7 +32,8 @@
         border-radius: var(--border-radius);
 
         img {
-          width: 100%;
+          max-width: 100%;
+          max-height: 100%;
           align-self: end;
         }
       }
