--- a/src/components/book-card/z-book-card/styles.css
+++ b/src/components/book-card/z-book-card/styles.css
@@ -77,6 +77,10 @@
                 -webkit-line-clamp: 2;
                 line-clamp: 2;
                 text-overflow: ellipsis;
+
+                * {
+                  all: unset;
+                }
               }
             }
           }
