--- a/src/components/book-card/z-book-card/styles.css
+++ b/src/components/book-card/z-book-card/styles.css
@@ -13,182 +13,180 @@
   border-radius: var(--border-radius);
   color: var(--color-default-text);
   font-family: var(--font-family-sans);
+}
 
-  .main-content {
-    display: flex;
-    flex-direction: column;
-    gap: calc(var(--space-unit) * 2);
+:host > article .main-content {
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--space-unit) * 2);
+}
 
-    .cover {
-      display: flex;
-      overflow: hidden;
-      height: 378px;
-      margin: 0 var(--space-unit);
-      border-radius: var(--border-radius);
+:host > article .main-content .cover {
+  display: flex;
+  overflow: hidden;
+  height: 378px;
+  margin: 0 var(--space-unit);
+  border-radius: var(--border-radius);
+}
 
-      img {
-        max-width: 100%;
-        max-height: 100%;
-        align-self: end;
-      }
-    }
+:host > article .main-content .cover img {
+  max-width: 100%;
+  max-height: 100%;
+  align-self: end;
+}
 
-    .card-info {
-      display: flex;
-      flex: 1;
-      flex-direction: column;
-      justify-content: space-between;
-      margin: 0 var(--space-unit);
-      gap: calc(var(--space-unit) * 2);
+:host > article .main-content .card-info {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 var(--space-unit);
+  gap: calc(var(--space-unit) * 2);
+}
 
-      .book-data {
-        display: flex;
-        flex: 1;
-        flex-direction: column;
-        justify-content: space-between;
-        gap: var(--space-unit);
+:host > article .main-content .card-info .book-data {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: var(--space-unit);
+}
 
-        .authors-title-cta-section {
-          display: grid;
-          column-gap: calc(var(--space-unit) * 2);
-          grid-template-areas:
-            "authors authors"
-            "title cta";
-          grid-template-columns: auto 24px;
+:host > article .main-content .card-info .book-data .authors-title-cta-section {
+  display: grid;
+  column-gap: calc(var(--space-unit) * 2);
+  grid-template-areas:
+    "authors authors"
+    "title cta";
+  grid-template-columns: auto 24px;
+}
 
-          .authors {
-            display: -webkit-box;
-            overflow: hidden;
-            height: 20px;
-            margin-bottom: calc(var(--space-unit) / 2);
-            -webkit-box-orient: vertical;
-            grid-area: authors;
-            -webkit-line-clamp: 1;
-            line-clamp: 1;
-            text-overflow: ellipsis;
-          }
+:host > article .main-content .card-info .book-data .authors-title-cta-section .authors {
+  display: -webkit-box;
+  overflow: hidden;
+  height: 20px;
+  margin-bottom: calc(var(--space-unit) / 2);
+  -webkit-box-orient: vertical;
+  grid-area: authors;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  text-overflow: ellipsis;
+}
 
-          .opera-title {
-            display: -webkit-box;
-            overflow: hidden;
-            height: 54px;
-            -webkit-box-orient: vertical;
-            grid-area: title;
-            -webkit-line-clamp: 2;
-            line-clamp: 2;
-            text-overflow: ellipsis;
+:host > article .main-content .card-info .book-data .authors-title-cta-section .opera-title {
+  display: -webkit-box;
+  overflow: hidden;
+  height: 54px;
+  -webkit-box-orient: vertical;
+  grid-area: title;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  text-overflow: ellipsis;
+}
 
-            * {
-              all: unset;
-            }
-          }
-        }
+:host > article .main-content .card-info .book-data .authors-title-cta-section .opera-title * {
+  all: unset;
+}
 
-        .isbn-tags-link-section {
-          .isbn-tags-section {
-            margin-bottom: var(--space-unit);
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section {
+  margin-bottom: var(--space-unit);
+}
 
-            .volume-title {
-              display: -webkit-box;
-              overflow: hidden;
-              height: 20px;
-              -webkit-box-orient: vertical;
-              -webkit-line-clamp: 1;
-              line-clamp: 1;
-              text-overflow: ellipsis;
-            }
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .volume-title {
+  display: -webkit-box;
+  overflow: hidden;
+  height: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  text-overflow: ellipsis;
+}
 
-            .isbn {
-              display: -webkit-box;
-              overflow: hidden;
-              height: 20px;
-              -webkit-box-orient: vertical;
-              -webkit-line-clamp: 1;
-              line-clamp: 1;
-              text-overflow: ellipsis;
-            }
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .isbn {
+  display: -webkit-box;
+  overflow: hidden;
+  height: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  text-overflow: ellipsis;
+}
 
-            .tags {
-              display: flex;
-              overflow: hidden;
-              height: 22px;
-              flex-flow: wrap;
-              padding: calc(var(--space-unit) / 2) 0 var(--space-unit);
-              gap: var(--space-unit);
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .tags {
+  display: flex;
+  overflow: hidden;
+  height: 22px;
+  flex-flow: wrap;
+  padding: calc(var(--space-unit) / 2) 0 var(--space-unit);
+  gap: var(--space-unit);
+}
 
-              z-tag.active {
-                --z-tag-bg: var(--color-primary03);
-                --z-tag-text-color: var(--color-default-text);
-              }
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .tags z-tag.active {
+  --z-tag-bg: var(--color-primary03);
+  --z-tag-text-color: var(--color-default-text);
+}
 
-              z-tag.disabled {
-                --z-tag-bg: var(--color-surface03);
-                --z-tag-text-color: var(--color-default-text);
-              }
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .tags z-tag.disabled {
+  --z-tag-bg: var(--color-surface03);
+  --z-tag-text-color: var(--color-default-text);
+}
 
-              z-tag.interactive {
-                cursor: pointer;
-              }
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .tags z-tag.interactive {
+  cursor: pointer;
+}
 
-              z-tag:focus {
-                box-shadow: var(--shadow-focus-primary);
-                outline: none;
-              }
-            }
-          }
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .tags z-tag:focus {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none;
+}
 
-          .link-section {
-            display: flex;
-            height: 24px;
-            align-items: center;
-            justify-content: space-between;
-            gap: var(--space-unit);
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .link-section {
+  display: flex;
+  height: 24px;
+  align-items: center;
+  justify-content: space-between;
+  gap: var(--space-unit);
+}
 
-            .adoption-tag {
-              padding: calc(var(--space-unit) / 2) var(--space-unit);
-              background-color: var(--green100);
-              border-radius: 100px;
-              text-transform: uppercase;
-            }
-          }
-        }
-      }
+:host > article .main-content .card-info .book-data .isbn-tags-link-section .link-section .adoption-tag {
+  padding: calc(var(--space-unit) / 2) var(--space-unit);
+  background-color: var(--green100);
+  border-radius: 100px;
+  text-transform: uppercase;
+}
 
-      .ebook-container {
-        height: 64px;
+:host > article .main-content .card-info .ebook-container {
+  height: 64px;
+}
 
-        .ebook {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          padding: calc(var(--space-unit) * 2) var(--space-unit);
-          background-color: var(--color-primary02);
-          border-radius: var(--border-radius);
-          gap: var(--space-unit);
+:host > article .main-content .card-info .ebook-container .ebook {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: calc(var(--space-unit) * 2) var(--space-unit);
+  background-color: var(--color-primary02);
+  border-radius: var(--border-radius);
+  gap: var(--space-unit);
+}
 
-          .app-name {
-            display: flex;
-            align-items: center;
-            padding: calc(var(--space-unit) / 2) 0;
-            font-family: var(--font-family-serif);
-            gap: calc(var(--space-unit) / 2);
+:host > article .main-content .card-info .ebook-container .ebook .app-name {
+  display: flex;
+  align-items: center;
+  padding: calc(var(--space-unit) / 2) 0;
+  font-family: var(--font-family-serif);
+  gap: calc(var(--space-unit) / 2);
+}
 
-            .laz {
-              color: var(--red500);
-            }
-          }
-        }
-      }
-    }
-  }
+:host > article .main-content .card-info .ebook-container .ebook .app-name .laz {
+  color: var(--red500);
+}
 
-  ::slotted([slot="cta"]) {
-    grid-area: cta;
-  }
+::slotted([slot="cta"]) {
+  grid-area: cta;
+}
 
-  ::slotted([slot="apps"]) {
-    border-top: solid var(--border-size-small) var(--color-surface03);
-  }
+::slotted([slot="apps"]) {
+  border-top: solid var(--border-size-small) var(--color-surface03);
 }
 
 :host > article.landscape {
@@ -196,52 +194,48 @@
   min-height: 332px;
   max-height: 428px;
   padding: 0;
+}
 
-  .main-content {
-    height: 296px;
-    flex-direction: row;
-    padding: calc(var(--space-unit) * 2);
+:host > article.landscape .main-content {
+  height: 296px;
+  flex-direction: row;
+  padding: calc(var(--space-unit) * 2);
+}
 
-    .cover {
-      display: flex;
-      overflow: hidden;
-      width: 221px;
-      height: auto;
-      margin: 0;
-    }
+:host > article.landscape .main-content .cover {
+  display: flex;
+  overflow: hidden;
+  width: 221px;
+  height: auto;
+  margin: 0;
+}
 
-    .card-info {
-      margin: 0;
+:host > article.landscape .main-content .card-info {
+  margin: 0;
+}
 
-      .book-data {
-        gap: unset;
+:host > article.landscape .main-content .card-info .book-data {
+  gap: unset;
+}
 
-        .authors-title-cta-section {
-          grid-template-areas:
-            "authors cta"
-            "title title";
+:host > article.landscape .main-content .card-info .book-data .authors-title-cta-section {
+  grid-template-areas:
+    "authors cta"
+    "title title";
+}
 
-          .authors {
-            margin-bottom: var(--space-unit);
-          }
-        }
+:host > article.landscape .main-content .card-info .book-data .authors-title-cta-section .authors {
+  margin-bottom: var(--space-unit);
+}
 
-        .isbn-tags-link-section {
-          .isbn-tags-section {
-            .tags {
-              padding: calc(var(--space-unit) / 2) 0;
-            }
-          }
-        }
-      }
+:host > article.landscape .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .tags {
+  padding: calc(var(--space-unit) / 2) 0;
+}
 
-      .ebook-container {
-        height: 76px;
+:host > article.landscape .main-content .card-info .ebook-container {
+  height: 76px;
+}
 
-        .ebook {
-          padding: var(--space-unit);
-        }
-      }
-    }
-  }
+:host > article.landscape .main-content .card-info .ebook-container .ebook {
+  padding: var(--space-unit);
 }
