--- a/src/components/book-card/z-book-card/styles.css
+++ b/src/components/book-card/z-book-card/styles.css
@@ -185,6 +185,10 @@
   color: var(--red500);
 }
 
+:host > article .main-content .card-info .ebook-container .ebook .immersive-reader {
+  cursor: pointer;
+}
+
 ::slotted([slot="cta"]) {
   grid-area: cta;
 }
